[tool.poetry]
name = "repl_python3_tweetsthreader-2"
version = "0.1.0"
description = ""
authors = ["cyrilckurian <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
tweepy = "^3.10.0"
flask = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
